# SVG-MPPI

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml  pyproject.toml  setup.py
config/: config_dingo_push.yaml
config/actors/: dingo.yaml
config/isaacgym/: push.yaml
config/mppi/: dingo_push.yaml  heijn.yaml  heijn_push.yaml  jackal.yaml
config/weights/: DingoCost.cfg
config/worlds/: base.yaml  empty.yaml  example.yaml  experiment.yaml  random.yaml  sandbox.yaml  simple.yaml  simple_vg.yaml  vicon.yaml
launch/: namo.launch  tests.launch  vicon.launch
scripts/: controller  environment  visualisation
src/environment/: __init__.py  physical_world.py  simulate_world.py
src/monitor/: __init__.py  dashboard.py  monitor.py  viewer.py
src/motion/: __init__.py  dingo.py
src/scheduler/: __init__.py  objective.py  scheduler.py
src/scheduler/global_planner/: __init__.py  nvg_planner.py  prm_planner.py  rrt_planner.py  svg_planner.py
tests/: setup_0  setup_1
