<?xml version="1.0"?>
<package format="2">
  <name>SVG-MPPI</name>
  <version>1.0.0</version>
  <description>The SVG-MPPI package</description>

  <!-- Maintainer Information -->
  <maintainer email="weedajoris@gmail.com">joris</maintainer>

  <!-- License Information -->
  <license>MIT</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Build Dependencies -->
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <!-- Build Export Dependencies -->
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <!-- Execution Dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Export Tag -->
  <export>
    <!-- Additional tool information can be added here -->
  </export>
</package>
