[tool.poetry]
name = "namo"
version = "0.1.0"
description = "Semantic-assisted navigation among movable obstacles | Simulated approach"
authors = ["Joris Weeda <j.j.weeda@student.tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
casadi = "3.5.5"
dash = "^2.14.2"
fabrics = "^0.6.2"
ghalton = "^0.6.2"
hydra-core = "^1.3.1"
isaacgym = {path = "src/isaacgym/python", develop = true}
matplotlib = "^3.7.3"
mpscenes = "^0.3.1"
plotly = "^5.18.0"
pytest = "^7.2.1"
pytorch3d = "^0.3.0"
python = "^3.8,<3.9"
urdfenvs = "^0.7.1"
yourdfpy = "^0.0.52"
zerorpc = "^0.6.3"
roslibpy = "^1.6.0"
rospkg = "^1.5.0"
pandas = "^1.3.3"
quaternionic = "^1.0.10"
seaborn = "^0.13.2"
scikit-image = "0.20.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pylint = "^2.16.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"